--- a/frontend/src/app/offline/offline.component.html
+++ b/frontend/src/app/offline/offline.component.html
@@ -1,5 +1,5 @@
 <div class="containe-ids">
-    <p>Clients added waiting for sync</p>
+    <span mat-h1>Clients added waiting for sync</span>
     <button mat-button class="btn-green" (click)="sendAlladd()">Send All</button>
     <div class="sync">
         <div *ngFor="let uuid of id" class="clients-div">
@@ -10,7 +10,7 @@
     </div>
 </div>
 <div class="containe-ids">
-    <p>Clients updated waiting for sync</p>
+    <h4>Clients updated waiting for sync</h4>
     <button mat-button class="btn-green" (click)="sendAllupdate()">Send All</button>
     <div class="sync">
         <div *ngFor="let uuidd of idsupdates" class="clients-div">
@@ -21,7 +21,7 @@
     </div>
 </div>
 <div class="containe-ids">
-    <p>Clients deleted waiting for sync</p>
+    <h4>Clients deleted waiting for sync</h4>
     <button mat-button class="btn-green" (click)="sendAlldelete()">Send All</button>
     <div class="sync">
         <div *ngFor="let uuuidd of idsdeletes" class="clients-div">
