--- a/frontend/src/app/update-client/update-client.component.html
+++ b/frontend/src/app/update-client/update-client.component.html
@@ -216,22 +216,42 @@
                 </div>
 
                 <div class="field">
-                    <mat-form-field>
-                        <mat-label>Phone number*</mat-label>
-                        <input matInput placeholder="+212" [(ngModel)]="PhoneNumber" />
-                    </mat-form-field>
+                    <div class="verify-phone">
+                        <div class="phone">
+                            
+                            <span class="phone-code">+212</span>
 
-                    <button mat-button class="btn-green" [disabled]="disbale_sms"
-                        (click)="Verify('code'); showVerifCodeInput= true">Verify</button>
-                    {{display}}
+                            <mat-form-field>
+                                <mat-label>Phone number*</mat-label>
+                                <input matInput placeholder="678876435" [(ngModel)]="PhoneNumber" />
+                            </mat-form-field>
+        
+                            <button mat-button class="btn-green" [disabled]="disbale_sms"
+                                (click)="Verify('code'); showVerifCodeInput= true">Send Code</button>
+    
+                        </div>
+                        <p style="font-weight: bold; color: rgb(87, 22, 22);left: 0;">{{display}}</p>
+                    </div>
+                    
                 </div>
 
                 <div class="field" *ngIf="showVerifCodeInput">
-                    <mat-form-field>
-                        <input matInput placeholder="code SMS" name="codeSMS" [(ngModel)]="codeSMS" />
-                    </mat-form-field>
-                    <button (click)="VerifySMS()">OK</button>
-                    {{status}}
+                    <div>
+                        <mat-form-field>
+                            <input matInput placeholder="code SMS" name="codeSMS" [(ngModel)]="codeSMS" />
+                        </mat-form-field>
+                        <button (click)="VerifySMS()" mat-button class="btn-yellow">Verify</button>
+                    </div>
+                    
+                    <div>
+                        <p *ngIf="verification_code === codeSMS; else error" style="color: green;">
+                            {{status}}
+                        </p>
+                        <ng-template #error>
+                            <p style="color: red;">{{status}}</p>
+                        </ng-template>
+                        
+                    </div>
                 </div>
                 <div class="field">
                     <mat-label class="input-label">PV photo : </mat-label>
