--- a/frontend/src/app/admin/delete-requests/delete-requests.component.html
+++ b/frontend/src/app/admin/delete-requests/delete-requests.component.html
@@ -3,6 +3,9 @@
 
         <div class="title-holder">
           <h1 class="list-title">Delete Requests</h1>
+          <div class="btns">
+            <button mat-button (click)="refresh()">Refresh</button>
+          </div>
         </div>
       
         <table mat-table matSort [dataSource]="dataSource">
