--- a/frontend/src/app/admin/roles/roles.component.html
+++ b/frontend/src/app/admin/roles/roles.component.html
@@ -77,7 +77,7 @@
             </th>
             <td mat-cell *matCellDef="let request">
                 <button mat-raised-button class="btn-green" (click)="onUpdateClick(request)"><mat-icon>edit</mat-icon>Update</button>
-                <button mat-raised-button class="btn-red" (click)="onDeleteClick(request)"><mat-icon>delete_outline</mat-icon>Delete</button>
+                <button mat-raised-button class="btn-red" [disabled]="disable(request)" (click)="onDeleteClick(request)"><mat-icon>delete_outline</mat-icon>Delete</button>
             </td>
           </ng-container>
           
