fix issues Add/Update Client

--- a/frontend/src/app/addclient/addclient.component.html
+++ b/frontend/src/app/addclient/addclient.component.html
@@ -81,7 +81,7 @@
     <div class="container" id="nfc" *ngIf="nfcShown">
         <div class="inputs-container">
             <ng-container *ngFor="let perm of loggedUser.permissions">
-                <div class="nfc" *ngIf="perm == 'Add NFC-Add'">
+                <div class="nfc" *ngIf="perm == 'Add NFC'">
                     <div class="scan-field">
                         <label class="input-label">NFC card puce : </label>
                         <button mat-button class="btn-green" (click)="Read()">Read</button>
