--- a/frontend/src/app/addclient/addclient.component.html
+++ b/frontend/src/app/addclient/addclient.component.html
@@ -201,7 +201,7 @@
                             <!-- To Do  -->
                             <mat-form-field>
                                 <mat-label>Phone number</mat-label>
-                                <input matInput [(ngModel)]="PhoneNumber" placeholder="add Phone number....."   (ngModelChange)="OnChangeNumber()"  required />
+                                <input matInput [(ngModel)]="PhoneNumber" placeholder="600000000"   (ngModelChange)="OnChangeNumber()"  required />
                             </mat-form-field>
                             
                             <button mat-button class="btn-green" [disabled]="disbale_sms"
