--- a/frontend/src/app/map/map.component.html
+++ b/frontend/src/app/map/map.component.html
@@ -37,7 +37,7 @@
                               placeholder="PDV Type">
                               <mat-option value="All" >All Type PDVs</mat-option>
                               <mat-option value="Audit">Gros</mat-option>
-                              <mat-option value="Audit_Retail">Detail</mat-option>   
+                              <mat-option value="Audit_Retail">Detail/Demi Gros</mat-option>   
                         </mat-select>
                   </div>
             </div>
