--- a/frontend/src/app/confirmation-dialog/confirmation-dialog.component.html
+++ b/frontend/src/app/confirmation-dialog/confirmation-dialog.component.html
@@ -1,7 +1,7 @@
 
 
 <mat-dialog-content >
-	<div *ngIf="confirmMessage!='sync' && confirmMessage != 'add' && confirmMessage != 'update' && confirmMessage != 'delete'" >
+	<div *ngIf="confirmMessage!='sync' &&  confirmMessage!='logout' && confirmMessage != 'add' && confirmMessage != 'update' && confirmMessage != 'delete'" >
 	<p >
 		{{confirmMessage}}
 	</p>
@@ -9,7 +9,7 @@
 	
 </mat-dialog-content>
 <mat-dialog-actions align="center">
-	<div *ngIf="confirmMessage!='sync' && confirmMessage != 'add' && confirmMessage != 'update' && confirmMessage != 'delete'" >
+	<div *ngIf="confirmMessage!='sync' && confirmMessage != 'add' &&  confirmMessage!='logout'&& confirmMessage != 'update' && confirmMessage != 'delete'" >
 	<button mat-raised-button (click)="dialogRef.close(false)">Cancel</button>
 	<button mat-raised-button style="background-color:#27AE61; color: white;" (click)="dialogRef.close(true)"
 		tabindex="1">Confirm</button>
@@ -43,6 +43,16 @@
 		<div class="load">
 			<label> Sending your request ... </label>
 			<mat-spinner class="mat-spinner-color"></mat-spinner>
+		</div>
+		
+	</div>
+
+
+	<div *ngIf="confirmMessage =='logout'" >
+		<div class="load">
+			<label> An Error has occurred please Login again </label>
+			<button mat-raised-button style="background-color:#27AE61; color: white;" (click)="logout()"
+		tabindex="1">Logout</button>
 		</div>
 		
 	</div>
